// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`counter actions t01 - snapshot testing 1`] = `
Object {
  "type": "kIncrementCounter",
}
`;

exports[`counter actions t01 - snapshot testing 2`] = `
Object {
  "type": "kDecrementCounter",
}
`;

exports[`counter actions t01 - snapshot testing 3`] = `[Function]`;

exports[`counter actions t01 - snapshot testing 4`] = `
Object {
  "type": "kIncrementCounterAsync",
}
`;
